--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.1.1",
     "bootstrap-vue": "^2.0.0-rc.9",
     "gsap": "^2.0.2",
+    "pixi-projection": "^0.2.1",
     "pixi.js": "^4.8.2",
     "vue": "^2.5.11"
   },
